--- a/teamrosters.html
+++ b/teamrosters.html
@@ -89,39 +89,55 @@
         <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
             <tr>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/C08.6" style="color:white">Assembly & Installation of the PROSPECT Short-Baseline Antineutrino Detector</u></i></td>
-                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/C08.7" style="color:white">Pulse Shape Discriminating<sup>6</sup>Li-Doped Liquid Scintillator for the PROSPECT Experiment</u></i></td>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/C08.7" style="color:white">Pulse Shape Discriminating <sup>6</sup>Li-Doped Liquid Scintillator for the PROSPECT Experiment</u></i></td>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/C08.8" style="color:white">Simulating Calibrations & Energy Response in the PROSPECT Detector</u></i></td>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/C08.9" style="color:white">Calibration & Initial Performance of the PROSPECT Detector</u></i></td>
             </tr>
          </table>
-         <h3 style="margin-left:5px;color:white"><a href="http://novaexperiment.fnal.gov/" style="color:white">NOvA</h3>
+         <h3 style="margin-left:5px"><a href="http://novaexperiment.fnal.gov/">NOvA</h3>
+         <p style="margin-left:20px">The NOvA (NuMI Off-axis νe Appearance) experiment is shedding light on the nature’s most elusive particles: neutrinos. Since the late 1990s, physicists 
+             have known that neutrinos exhibit a quantum mechanical behavior called oscillations. But this behavior is not predicted by the Standard Model of particle physics. NOvA is working 
+             to better understand these strange particles through precision measurements of their oscillation properties.</p>
+         <h4 style="margin-left:5px">Members</h4>
+         <table class="table table-bordered"style="background-color:rgb(119, 128, 175)">
             <tr>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071326/" style="color:white">Search for Standard Model Production of Four Top Quarks</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072557/" style="color:white">Measurement of top quark properties in single top production</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072277/" style="color:white">Search for scalar top quark production in all hadronic channel</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072338/"style="color:white">Top quark mass calibration for Monte-Carlo event generators</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071321/"style="color:white">First attempt to search for H+ to cbbar in top quark decays at CMS</u></i></td>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/C08.2">Short-baseline Sterile Neutrino Searches Using the NOvA Near Detector</u></i></td>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/C08.3">Planned Improvements to Sterile Neutrino Searches in the NOvA Far Detector</u></i></td>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/R17.6">Supernova Neutrino Detection at the NOvA Experiment</u></i></td>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/K08.3">Current Status of the Inclusive Neutral Current π<sup>0</sup> Production Cross section Measurement with the NOvA Near Detector</u></i></td>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/K08.4">Status of the inclusive electron neutrino charged-current cross-section measurement in the NOvA near detector</u></i></td>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/K08.5">Status of the ν<sub>μ</sub>  CC inclusive cross section measurement in the NOvA near detector</u></i></td>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/K08.7">Event Reconstruction Efficiency and Purity Studies for Charged Pion Semi-Inclusive Neutrino Charged-Current Cross Section in NOvA</u></i></td>
+             </tr>
+        </table>
+        <h3 style="margin-left:5px"><a href="https://sites.duke.edu/coherent/">COHERENT</h3>
+        <p style="margin-left:20px">The COHERENT collaboration aims to measure CEvNS (Coherent Elastic Neutrino-Nucleus Scattering) using the high-quality pion-decay-at-rest neutrino source at the Spallation Neutron Source in Oak Ridge, Tennessee.</p>
+        <h4 style="margin-left:5px">Members</h4>
+        <table class="table table-bordered"style="background-color:rgb(119, 128, 175)">
+            <tr>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/D08.1">Search for CEvNS at the SNS with the COHERENT experiment</u></i></td>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/D08.2">Status of CEvNS Search with the CENNS-10 Liquid Argon Detecor for COHERENT</u></i></td>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/D08.4">Non-Standard Neutrino Interactions in COHERENT</u></i></td>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/D08.3">The Coherent Neutrino-Nucleus Interaction Experiment</u></i></td>
             </tr>
         </table>
-        <h4 style="margin-left:5px;color:white">Bottom Quark Experiments</h4>
-        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
+        <h3 style="margin-left:5px"><a href="http://juno.ihep.cas.cn/">JUNO</h3>
+        <p style="margin-left:20px">The Jiangmen Underground Neutrino Observatory (JUNO) is a multipurpose neutrino experiment designed to determine neutrino mass hierarchy and precisely measure oscillation parametersby 
+            detecting reactor neutrinos from the Yangjiang and Taishan Nuclear Power Plants, observe supernova neutrinos, study the atmospheric, solar neutrinos and geo-neutrinos, and perform exotic searches, with a 
+            20-thousand-ton liquid scintillator detector of unprecedented 3% energy resolution (at 1 MeV) at 700-meter deep underground.</p>
+        <h4 style="margin-left:5px">Members</h4>
+        <table class="table table-bordered"style="background-color:rgb(119, 128, 175)">
             <tr>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071500/"style="color:white">Novel real-time calibration and alignment at LHCb for RunII</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072026/"style="color:white">b-hadron production at LHCb</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072525/"style="color:white">Rare leptonic and semileptonic b-hadron decays and Tests of Lepton Flavour Universality at LHCb</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072055/"style="color:white">Electroweak scale exotica with LHCb</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071318/"style="color:white">Search for a Standard Model Higgs boson produced in association w a W or Z boson decaying to bottom quarks</u></i></td>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/D08.5">Towards a comprehensive neutrino program: the design and progress of JUNO</u></i></td>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/G08.4">The JUNO Calibration Systems</u></i></td>
             </tr>
         </table>
-        <h4 style="margin-left:5px;color:white">NOvA Experiments</h4>
-        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
-            <tr>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2144798/"style="color:white">Recent Results of Electron-Neutrino Appearance Measurement at NOvA</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2194565/"style="color:white">Neutrino Induced Neutral Current Coherent π^0 Production in The NOvA Near Detector</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072009/"style="color:white">Looking amongst the neutrinos for lightweight dark matter in the NOva Near Dectector</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071342/"style="color:white">Measurement of c-jet tagging efficiency in ATLAS with W+c-jet events</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071918/"style="color:white">Extrapolation, Systematics and Results for the NOvA Disappearance Analysis</u></i></td>
-            </tr>
+        <h3 style="margin-left:5px"><a href="http://www.dunescience.org/">DUNE</h3>
+        <p style="margin-left:20px">The Deep Underground Neutrino Experiment (DUNE) is a leading-edge, international experiment for neutrino science and proton decay studies. Discoveries over the past half-century 
+            have put neutrinos, the most abundant matter particles in the universe, in the spotlight for further research into several fundamental questions about the nature of matter and the evolution of the
+            universe — questions that DUNE will seek to answer.</p>
+        <h4 style="margin-left:5px">Members</h4>
+        <table class="table table-bordered"style="background-color:rgb(119, 128, 175)">
             <tr>
                 <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2208753/"style="color:white">Constraints on the Neutrino Flux in NOvA using the Near Detector Data</u></i></td>
                 <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071966/"style="color:white">Systematic Uncertainties in the NOvA Electron Neutrino Appearance Analysis</u></i></td>
