--- a/teamrosters.html
+++ b/teamrosters.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 <style>
-    body, html
+    table, th, td
     {
-        height: 100%;
-        margin: 0;
-        padding: 0;
+        border: 1px solid white;
+        border-collapse: collapse;
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
