--- a/teamrosters.html
+++ b/teamrosters.html
@@ -4,7 +4,7 @@
 <style>
     table, th, td
     {
-        border: 1px solid white;
+        border: 3px solid white;
         border-collapse: collapse;
     }
     .cd-fixed-bg.cd-fixed-bg--1
@@ -71,7 +71,7 @@
             <tr>
                 <td><i><u><a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.89.072013" style="color:white">SIMPLE</u></i></td>
                 <td><i><u><a href="https://www.pnnl.gov/about/ashby_accounts/tch_052018.asp" style="color:white">Pacific NW National Lab - WIMP Search</u></i></td>
-                <td><i><u><a href="http://lz.lbl.gov/" style="color:white">LX</u></i></td>
+                <td><i><u><a href="http://lz.lbl.gov/" style="color:white;width: 100%">LX</u></i></td>
             </tr>
             <tr>
                 <td><i><u><a href="http://dpnc.unige.ch/dampe/" style="color:white">DAMPE</u></i></td>
@@ -79,7 +79,7 @@
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/R17.9" style="color:white">DarkSide-20k</u></i></td>
             </tr>
         </table>
-        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
+        <table class="table table-bordered"style="color:white;width: 100%">
             <tr>
                 <td><i><u><a href="https://na64.web.cern.ch/" style="color:white">CERN SPS/NA64</u></i></td>
                 <td><i><u><a href="https://confluence.slac.stanford.edu/display/hpsg/Heavy+Photon+Search+Experiment" style="color:white">SLAC/HPS</u></i></td>
