--- a/teamrosters.html
+++ b/teamrosters.html
@@ -62,7 +62,7 @@
         <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
         <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Direct Dark Matter</b></i></h2>
-        <table class="table table-bordered"style="color:white">
+        <table style="width: 100%;color:white">
             <tr>
                 <td><i><u><a href="http://www.picoexperiment.com/dm_problem.php" style="color:white">PICO</u></i></td>
                 <td><i><u><a href="http://cdms.berkeley.edu/" style="color:white">SuperCDMS</u></i></td>
