--- a/teamrosters.html
+++ b/teamrosters.html
@@ -56,7 +56,7 @@
         
         <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
-        <h2 style="text-align:left;margin-left:5px;color:white"><b><i><u><a href="https://home.cern/about/physics/dark-matter">Direct Dark Matter</b></i></u></a></h2>
+        <h2 style="text-align:left;margin-left:5px;color:white"><b><i><u><a href="https://home.cern/about/physics/dark-matter" style="color:white">Direct Dark Matter</b></i></u></a></h2>
         <p style="color:white">"Unlike normal matter, dark matter does not interact with the electromagnetic force. This means it does not absorb, reflect or emit light,
             making it extremely hard to spot."</p>
         <h4 style="margin-left:5px;color:white">Members</h4>
@@ -112,12 +112,14 @@
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/C08.2" style="color:white">Short-baseline Sterile Neutrino Searches Using the NOvA Near Detector</u></i></td>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/C08.3" style="color:white">Planned Improvements to Sterile Neutrino Searches in the NOvA Far Detector</u></i></td>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/R17.6" style="color:white">Supernova Neutrino Detection at the NOvA Experiment</u></i></td>
+             </tr>
+             <tr>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/K08.3" style="color:white">Current Status of the Inclusive Neutral Current π<sup>0</sup> Production Cross section Measurement with the NOvA Near Detector</u></i></td>
-            </tr>
-            <tr>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/K08.4" style="color:white">Status of the inclusive electron neutrino charged-current cross-section measurement in the NOvA near detector</u></i></td>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/K08.5" style="color:white">Status of the ν<sub>μ</sub>  CC inclusive cross section measurement in the NOvA near detector</u></i></td>
-                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/K08.7" style="color:white">Event Reconstruction Efficiency and Purity Studies for Charged Pion Semi-Inclusive Neutrino Charged-Current Cross Section in NOvA</u></i></td>
+             </tr>
+             <tr>
+                <td colspan="3"><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/K08.7" style="color:white">Event Reconstruction Efficiency and Purity Studies for Charged Pion Semi-Inclusive Neutrino Charged-Current Cross Section in NOvA</u></i></td>
              </tr>
         </table>
         <h3 style="margin-left:5px"><a href="https://sites.duke.edu/coherent/" style="color:white"><u>COHERENT</u></a></h3>
@@ -155,9 +157,9 @@
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/H08.6"style="color:white">Neutrino induced Coherent Pion: Precision Study in DUNE ND</u></i></td>
             </tr>
             <tr>
-                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/H08.7/"style="color:white">Precision temperature gradient system for ProtoDune</u></i></td>
-                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/X10.9"style="color:white">Muon-induced spallation backgrounds in DUNE</u></i></td>
-                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/R17.8"style="color:white">Supernova Neutrino Studies for the Deep Underground Neutrino Experiment</u></i></td>
+                <td width="33%"><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/H08.7/"style="color:white">Precision temperature gradient system for ProtoDune</u></i></td>
+                <td width="33%"><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/X10.9"style="color:white">Muon-induced spallation backgrounds in DUNE</u></i></td>
+                <td width="33%"><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/R17.8"style="color:white">Supernova Neutrino Studies for the Deep Underground Neutrino Experiment</u></i></td>
             </tr>
         </table>
         <h3 style="margin-left:5px"><a href="https://www-numi.fnal.gov/" style="color:white"><u>MINOS</u></a></h3>
