--- a/teamrosters.html
+++ b/teamrosters.html
@@ -154,12 +154,13 @@
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/C08.1"style="color:white">Resolving DUNE oscillation parameter ambiguities in the 3+1 sterile neutrino scenario using SBN</u></i></td>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/H08.4"style="color:white">Status of DUNE Experiment</u></i></td>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/H08.5"style="color:white">Design and Fabrication of the protoDUNE Dual Phase LArTPC</u></i></td>
-                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/H08.6"style="color:white">Neutrino induced Coherent Pion: Precision Study in DUNE ND</u></i></td>
             </tr>
             <tr>
-                <td width="33%"><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/H08.7/"style="color:white">Precision temperature gradient system for ProtoDune</u></i></td>
-                <td width="33%"><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/X10.9"style="color:white">Muon-induced spallation backgrounds in DUNE</u></i></td>
-                <td width="33%"><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/R17.8"style="color:white">Supernova Neutrino Studies for the Deep Underground Neutrino Experiment</u></i></td>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/H08.6"style="color:white">Neutrino induced Coherent Pion: Precision Study in DUNE ND</u></i></td>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/H08.7/"style="color:white">Precision temperature gradient system for ProtoDune</u></i></td>
+                <td"><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/X10.9"style="color:white">Muon-induced spallation backgrounds in DUNE</u></i></td>
+                </tr>
+                <td colspan="3"><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/R17.8"style="color:white">Supernova Neutrino Studies for the Deep Underground Neutrino Experiment</u></i></td>
             </tr>
         </table>
         <h3 style="margin-left:5px"><a href="https://www-numi.fnal.gov/" style="color:white"><u>MINOS</u></a></h3>
@@ -194,13 +195,15 @@
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/S17.8" style="color:white">Multimessenger TeV Gamma and TeV Neutrino Coincidence Alerts from HAWC and IceCube</u></i></td>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/S17.7/" style="color:white">IceCube Search for Galactic Neutrino Sources using the HAWC 2HWC Catalog</u></i></td>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/S17.6" style="color:white">Analysis of Correlations Between Pierre Auger and IceCube IC59 Data</u></i></td>
+            </tr>
+            <tr>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/S17.4" style="color:white">Search for diffuse gamma-ray emission from the Galactic plane with IceCube</u></i></td>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/S17.5" style="color:white">A search for PeV gamma-ray point sources with five years of data from the IceCube Observatory</u></i></td>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/G08.7" style="color:white">Recent Developments in Calibration of the IceCube Detector</u></i></td>
-            </tr>
-            <tr>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/G08.6" style="color:white">Reverse table reconstructions for low energy neutrinos in IceCube</u></i></td>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/G08.3" style="color:white">Improved muon background rejection at Low Energies (IceCube, DeepCore)</u></i></td>
+            </tr>
+            <tr>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/G08.2" style="color:white">Simulated Optical Efficiency of the IceCUBE Matryoshka WOM</u></i></td>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/R17.1" style="color:white">The IceCube Neutrino Observatory: Future Plans</u></i></td>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/D08.9" style="color:white">Atmospheric Tau Neutrino Appearance Analysis with IceCube/DeepCore</u></i></td>
@@ -213,8 +216,8 @@
         <h4 style="margin-left:5px;color:white">Members</h4>
         <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
             <tr>
-                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/X10.4" style="color:white">The ANNIE Experiment at Fermilab</u></i></td>
-                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/S17.9" style="color:white">Searching for Counterparts to Cosmic Neutrinos Using the Fermi LAT Satellite</u></i></td>
+                <td width="50%"><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/X10.4" style="color:white">The ANNIE Experiment at Fermilab</u></i></td>
+                <td width=50%"><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/S17.9" style="color:white">Searching for Counterparts to Cosmic Neutrinos Using the Fermi LAT Satellite</u></i></td>
             </tr>
         </table>
         <h3 style="margin-left:5px;color:white"><a href="https://science.nasa.gov/ems/12_gammarays" style="color:white"><u>MeV Gamma-ray</u></a></h3>
