--- a/teamrosters.html
+++ b/teamrosters.html
@@ -158,7 +158,7 @@
             <tr>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/H08.6"style="color:white">Neutrino induced Coherent Pion: Precision Study in DUNE ND</u></i></td>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/H08.7/"style="color:white">Precision temperature gradient system for ProtoDune</u></i></td>
-                <td"><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/X10.9"style="color:white">Muon-induced spallation backgrounds in DUNE</u></i></td>
+                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/X10.9"style="color:white">Muon-induced spallation backgrounds in DUNE</u></i></td>
                 </tr>
                 <td colspan="3"><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/R17.8"style="color:white">Supernova Neutrino Studies for the Deep Underground Neutrino Experiment</u></i></td>
             </tr>
