--- a/teamrosters.html
+++ b/teamrosters.html
@@ -57,7 +57,7 @@
         <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
         <h2 style="text-align:left;margin-left:5px;color:white"><b><i><u><a href="https://home.cern/about/physics/dark-matter" style="color:white">Direct Dark Matter</b></i></u></a></h2>
-        <p style="color:white">"Unlike normal matter, dark matter does not interact with the electromagnetic force. This means it does not absorb, reflect or emit light,
+        <p style="margin-left:5px;color:white">"Unlike normal matter, dark matter does not interact with the electromagnetic force. This means it does not absorb, reflect or emit light,
             making it extremely hard to spot."</p>
         <h4 style="margin-left:5px;color:white">Members</h4>
         <table class="table table-bordered" style="background-color:rgb(119, 128, 175);color:white">
