--- a/teamrosters.html
+++ b/teamrosters.html
@@ -5,7 +5,7 @@
     .flex-container
     {
         display: flex;
-        height: 100px;
+        height: 75px;
         align-items: center;
     }
     .cd-fixed-bg.cd-fixed-bg--1
@@ -264,8 +264,8 @@
         <br>
 
        <div class="flex-container">
-             <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</a> | 
-             <a href="about.html" style="color:white">About</a> | <a href="creators.html" style="color:white">The Creators</a></p></div>
+             <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
+             <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p></div>
     
 </body>
 </html>
