--- a/teamrosters.html
+++ b/teamrosters.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 <style>
+    img
+    {
+        float: right;
+    }
     .flex-container
     {
         display: flex;
-        height: 75px;
+        flex-wrap: wrap;
+        height: 50px;
         align-items: center;
     }
     .cd-fixed-bg.cd-fixed-bg--1
@@ -265,7 +270,8 @@
 
        <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
-             <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p></div>
+             <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
+             <img src="kansas-jayhawks-profile.jpg"></div>                      
     
 </body>
 </html>
