--- a/teamrosters.html
+++ b/teamrosters.html
@@ -224,7 +224,7 @@
         <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
             <tr>
                 <td width="50%"><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/X10.4" style="color:white">The ANNIE Experiment at Fermilab</u></i></td>
-                <td width=50%"><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/S17.9" style="color:white">Searching for Counterparts to Cosmic Neutrinos Using the Fermi LAT Satellite</u></i></td>
+                <td width="50%"><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/S17.9" style="color:white">Searching for Counterparts to Cosmic Neutrinos Using the Fermi LAT Satellite</u></i></td>
             </tr>
         </table>
         <h3 style="margin-left:5px;color:white"><a href="https://science.nasa.gov/ems/12_gammarays" style="color:white"><u>MeV Gamma-ray</u></a></h3>
@@ -267,7 +267,7 @@
        <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
              <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
-             <img src="kansas-jayhawks-profile.jpg" style="float: right" width="50" height="50"></div>                      
+             <img src="kansas-jayhawks-profile.jpg" style="float:right;width:50;height:50"></div>                      
     
 </body>
 </html>
