--- a/teamrosters.html
+++ b/teamrosters.html
@@ -267,7 +267,7 @@
        <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
              <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
-             <img src="kansas-jayhawks-profile.jpg" style="float:right;width:50;height:50"></div>                      
+             <img src="kansas-jayhawks-profile.jpg" style="float:right;width:45px;height:45px"></div>                      
     
 </body>
 </html>
