--- a/teamrosters.html
+++ b/teamrosters.html
@@ -9,9 +9,21 @@
         height: 50px;
         align-items: center;
     }
-    .flex-container1
+    .flex-container > .image
     {
-        align-content: flex-end;
+        flex: 100%;
+        text-align: right;
+    }
+    .image > img
+    {
+        vertical-align: top;
+        max-width: 100%;
+        max-height: 50px;
+    }
+    .flex-container > .text
+    {
+        flex: 200%;
+        margin: auto 0;
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
@@ -269,11 +281,13 @@
         <br>
 
        <div class="flex-container">
-             <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
-             <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
-             <div class="flex-container1">
+             <div class="image">
                 <img src="kansas-jayhawks-profile.jpg" style="float:right;width:45px;height:45px">
              </div>
+           <div class="text">
+                <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
+                <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
+           </div>
         </div>
     
 </body>
