--- a/teamrosters.html
+++ b/teamrosters.html
@@ -12,7 +12,7 @@
     .flex-container > .image
     {
         flex: 100%;
-        text-align: right;
+        text-align: left;
     }
     .image > img
     {
