--- a/teamrosters.html
+++ b/teamrosters.html
@@ -12,18 +12,12 @@
     .flex-container > .image
     {
         flex: 100%;
-        text-align: left;
     }
     .image > img
     {
-        vertical-align: top;
         max-width: 100%;
         max-height: 50px;
-    }
-    .flex-container > .text
-    {
-        flex: 200%;
-        margin: auto 0;
+        float: right;
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
@@ -284,10 +278,8 @@
              <div class="image">
                 <img src="kansas-jayhawks-profile.jpg" style="float:right;width:45px;height:45px">
              </div>
-           <div class="text">
                 <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
                 <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
-           </div>
         </div>
     
 </body>
