--- a/teamrosters.html
+++ b/teamrosters.html
@@ -8,16 +8,7 @@
         flex-wrap: wrap;
         height: 50px;
         align-items: center;
-    }
-    .flex-container > .image
-    {
-        flex: 100%;
-    }
-    .image > img
-    {
-        max-width: 100%;
-        max-height: 50px;
-        float: right;
+        justify-content: space-between;
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
@@ -275,12 +266,10 @@
         <br>
 
        <div class="flex-container">
-             <div class="image">
-                <img src="kansas-jayhawks-profile.jpg" style="float:right;width:45px;height:45px">
-             </div>
-                <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
-                <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
-        </div>
+             <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
+             <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
+             <img src="kansas-jayhawks-profile.jpg" style="float:right;width:45px;height:45px">
+       </div>
     
 </body>
 </html>
