--- a/rules.html
+++ b/rules.html
@@ -77,11 +77,11 @@
         <li style="margin-left:50px;color:white;font-size:22px"><b><i>Teams - </b></i>Experiments that are selected by Users</li>
         <li style="margin-left:50px;color:white;font-size:22px"><b><i>Index - </b></i>List of Teams that a User chooses for an Event</li>
      </ul></div>
-     <h3 style="margin-left:25px;font-size:30px">Game Tree</h3>
+     <h3 style="margin-left:25px;font-size:30px;color:white">Game Tree</h3>
      <ul>
-         <li style="margin-left:50px;font-size:22px">Game ---> Tournament ---> Event</li>
+         <li style="margin-left:50px;font-size:22px;color:white">Game ---> Tournament ---> Event</li>
      </ul>
-     <h3 style="margin-left:25px;font-size:30px">Game Play Process</h3>
+     <h3 style="margin-left:25px;font-size:30px;color:white">Game Play Process</h3>
      <ul>
          <li style="margin-left:50px;color:white;font-size:22px">Users choose a Tournament they would like to participate in</li>
          <li style="margin-left:50px;color:white;font-size:22px">Users then create an Index for each Event that occurs in the Tournament</li>
