--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     </ul>
      </div>
      </nav>
-        
+        <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
+            <div class="cd-scrolling-bg__content">
      <div class="center">
          <h1 style="text-align:center;color:white"><font face="sans-serif"><i> Welcome </i></h1>
          <h2 style="text-align:center;color:white"><font face="sans-serif"> to </h2>
