--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -61,7 +61,8 @@
      </ul>
      </div>
     </nav>
-       
+       <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
+            <div class="cd-scrolling-bg__content">
      <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Dark Matter</b></i></h2> 
      <h4 style="margin-left:5px;color:white">WIMP & Dark/Hidden Sectors</h4>
      <table colspan="3" class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
