--- a/joinatournament.html
+++ b/joinatournament.html
@@ -82,7 +82,8 @@
         </form>
         </div>
     </nav>
-        
+        <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
+            <div class="cd-scrolling-bg__content">
         
        <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
