--- a/signup.html
+++ b/signup.html
@@ -53,7 +53,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="bg">
+<div class="cd-fixed-bg cd-fixed-bg--1">
 <nav class="navbar navbar-inverse">
 <div class="container-fluid">
 <div class="navbar-header">
