--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
          <h1 style="text-align:center;color:white"><font face="sans-serif"><i> FANTASY PHYSICS <i></h1>
          <h3 style="text-align:center;color:white"><i> ~ unlock the potential ~ </i></h3> 
      </div>    
+             <footer>
     <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
              <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
@@ -76,6 +77,7 @@
        </div>
         </div>
         </div>
+             </footer>
         
 </body> 
 </html> 
