--- a/teamrosters.html
+++ b/teamrosters.html
@@ -26,6 +26,10 @@
     {
         min-height: 100%;
     }
+    h3 
+    {
+        
+     
 </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -96,11 +100,13 @@
             </div>
         </div>
         <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Neutrinos</b></i></h2>
+        <span class="border border-info" class="rounded">
         <h3 style="margin-left:5px;color:white"><a href="https://prospect.yale.edu/" style="color:white"><u>PROSPECT</u></a></h3>
         <p style="margin-left:20px;color:white">"PROSPECT is a reactor neutrino experiment at very short baselines to make a precision measurement of the flux and energy 
             spectrum of antineutrinos emitted from nuclear reactors. PROSPECT will search for the oscillation signature of sterile neutrinos and test our understanding of 
             the emission of antineutrinos from the fission products in a nuclear reactor. The measurements of PROSPECT will test our understanding of the Standard Model of 
             Particle Physics, deepen our understanding of nuclear processes in a reactor, and help develop technology for the remote monitoring of nuclear reactors for safeguard and non-proliferation."</p>
+        </span>
         <h4 style="margin-left:5px;color:white">Members</h4>
         <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
             <tr>
