--- a/teamrosters.html
+++ b/teamrosters.html
@@ -30,6 +30,7 @@
     {
         border: 2px solid white;
         border-radius: 5px;
+        padding: 5px;
     }
 </style>
     <meta charset="utf-8">
@@ -101,7 +102,7 @@
             </div>
         </div>
         <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Neutrino Members</b></i></h2>
-        <h3 class="round1" style="margin-left:5px;color:white"><a href="https://prospect.yale.edu/" style="color:white"><u>PROSPECT</u></a></h3>
+        <h3 style="margin-left:5px;color:white"><a href="https://prospect.yale.edu/" style="color:white"><u>PROSPECT</u></a></h3>
         <p class="round1" style="margin-left:20px;color:white">"PROSPECT is a reactor neutrino experiment at very short baselines to make a precision measurement of the flux and energy 
             spectrum of antineutrinos emitted from nuclear reactors. PROSPECT will search for the oscillation signature of sterile neutrinos and test our understanding of 
             the emission of antineutrinos from the fission products in a nuclear reactor. The measurements of PROSPECT will test our understanding of the Standard Model of 
