--- a/teamrosters.html
+++ b/teamrosters.html
@@ -71,10 +71,10 @@
         <div class="w3-container">
         <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
-        <h2 style="text-align:left;margin-left:5px;color:white"><b><i><u><a href="https://home.cern/about/physics/dark-matter" style="color:white">Direct Dark Matter</b></i></u></a></h2>
-        <p style="margin-left:5px;color:white">"Unlike normal matter, dark matter does not interact with the electromagnetic force. This means it does not absorb, reflect or emit light,
+        <h2 style="color:white"><b><i><u><a href="https://home.cern/about/physics/dark-matter" style="color:white">Direct Dark Matter</b></i></u></a></h2>
+        <p style="color:white">"Unlike normal matter, dark matter does not interact with the electromagnetic force. This means it does not absorb, reflect or emit light,
             making it extremely hard to spot."</p>
-        <h4 style="margin-left:5px;color:white">Members</h4>
+        <h4 style="color:white">Members</h4>
         <table class="table table-bordered" style="background-color:rgb(119, 128, 175);color:white">
             <tr>
                 <td><i><u><a href="http://www.picoexperiment.com/dm_problem.php" style="color:white">PICO</u></i></td>
@@ -99,11 +99,11 @@
                 <td><i><u><a href="http://people.roma2.infn.it/~dama/web/home.html" style="color:white">DAMA</u></i></td>
             </tr>
         </table>
-        <br>
+        <hr>
             </div>
         </div>
-        <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Neutrino Members</b></i></h2>
-        <h3 style="margin-left:5px;color:white"><a href="https://prospect.yale.edu/" style="color:white"><u>PROSPECT</u></a></h3>
+        <h2 style="color:white"><b><i>Neutrino Members</b></i></h2>
+        <h3 style="color:white"><a href="https://prospect.yale.edu/" style="color:white"><u>PROSPECT</u></a></h3>
         <p class="round1" style="margin-left:20px;color:white">"PROSPECT is a reactor neutrino experiment at very short baselines to make a precision measurement of the flux and energy 
             spectrum of antineutrinos emitted from nuclear reactors. PROSPECT will search for the oscillation signature of sterile neutrinos and test our understanding of 
             the emission of antineutrinos from the fission products in a nuclear reactor. The measurements of PROSPECT will test our understanding of the Standard Model of 
@@ -116,11 +116,11 @@
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/C08.9" style="color:white">Calibration & Initial Performance of the PROSPECT Detector</u></i></td>
             </tr>
          </table>
-         <h3 style="margin-left:5px"><a href="http://novaexperiment.fnal.gov/" style="color:white"><u>NOvA</u></a></h3>
-         <p style="margin-left:20px;color:white">"The NOvA (NuMI Off-axis νe Appearance) experiment is shedding light on the nature’s most elusive particles: neutrinos. Since the late 1990s, physicists 
+         <h3><a href="http://novaexperiment.fnal.gov/" style="color:white"><u>NOvA</u></a></h3>
+         <p style="color:white">"The NOvA (NuMI Off-axis νe Appearance) experiment is shedding light on the nature’s most elusive particles: neutrinos. Since the late 1990s, physicists 
              have known that neutrinos exhibit a quantum mechanical behavior called oscillations. But this behavior is not predicted by the Standard Model of particle physics. NOvA is working 
              to better understand these strange particles through precision measurements of their oscillation properties."</p>
-         <h4 style="margin-left:5px;color:white">Members</h4>
+         <h4 style="color:white">Members</h4>
          <table class="table table-bordered"style="background-color:rgb(119, 128, 175)">
             <tr>
                 <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/C08.2" style="color:white">Short-baseline Sterile Neutrino Searches Using the NOvA Near Detector</u></i></td>
@@ -186,7 +186,7 @@
                <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/J08.5"style="color:white">Repurposing MINOS Scintillator Modules for the Short Baseline Neutrino Program Far Detector (ICARUS) Cosmic Ray Tagger</u></i></td>
             </tr>
         </table>
-            <br>
+            <hr>
      
         <h2 style="color:white;text-align:left;margin-left:5px"><b><i>Astroparticle</b></i></h2>
         <h3 style="margin-left:5px;color:white"><a href="https://www.katrin.kit.edu/" style="color:white"><u>KATRIN</u></a></h3>
@@ -252,7 +252,7 @@
             </tr>
         </table>
         </div>
-            <br>
+            <hr>
 
         <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Exotic States</b></i></h2>
         <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
@@ -273,7 +273,7 @@
                 <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071584/" style="color:white">Search for exotic decays of the 125 GeV Higgs boson using the CMS detector</u></i></td>
             </tr>
         </table>
-        <br>
+        <hr>
 
        <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
